Fix hamburger menu not displaying on mobile
- Move mobile menu inside header for correct absolute positioning
- Remove conflicting display:none from CSS (React controls visibility)

--- a/site/src/layouts/MainLayout.module.css
+++ b/site/src/layouts/MainLayout.module.css
@@ -108,7 +108,6 @@
 }
 
 .mobileMenu {
-  display: none;
   position: absolute;
   top: 100%;
   left: 0;
@@ -237,10 +236,6 @@
 
   .hamburger {
     display: flex;
-  }
-
-  .mobileMenu {
-    display: block;
   }
 
   .main {
